# solana-game-examples

./: .gitmodules  README.md
battle-coins/: README.md
battle-coins/program/: Anchor.toml  README.md  package.json
battle-coins/program/programs/battle-coins/: Cargo.toml
battle-coins/program/programs/battle-coins/src/: lib.rs
battle-coins/program/tests/: battle-coins.ts
city-builder/: README.md
city-builder/program/: Anchor.toml
city-builder/program/programs/lumberjack/: Cargo.toml
city-builder/program/programs/lumberjack/src/: lib.rs
city-builder/program/programs/lumberjack/src/state/: board.rs  mod.rs
city-builder/unity/city-builder/Assets/: CollectionIndicator.cs  HealthBar.cs  RandomRotation.cs
city-builder/unity/city-builder/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
city-builder/unity/city-builder/UserSettings/: EditorUserSettings.asset
coin-flip/app/: package-lock.json  package.json
coin-flip/app/components/: InitPlayerButton.tsx
coin-flip/program/: Anchor.toml
idle-game/: README.md
idle-game/app/src/components/: Game.tsx
idle-game/app/src/contexts/: ContextProvider.tsx
idle-game/app/src/idl/: idle_game.ts
idle-game/program/: Anchor.toml
idle-game/program/tests/: idle-game.ts
lumberjack/: README.md
lumberjack/app/: next.config.js  package-lock.json  package.json
lumberjack/app/components/: ChopTreeButton.tsx  DisplayGameState.tsx  InitPlayerButton.tsx
lumberjack/app/contexts/: GameStateProvider.tsx
lumberjack/app/idl/: lumberjack.ts
lumberjack/app/pages/: index.tsx
lumberjack/app/src/components/: ChopTree.tsx  SendTransaction.tsx  SessionProvider.tsx
lumberjack/app/src/contexts/: ContextProvider.tsx
lumberjack/app/src/idl/: lumberjack.ts
lumberjack/app/src/utils/: anchor.ts
lumberjack/app/utils/: anchor.ts
lumberjack/app2/: package.json
lumberjack/app2/components/: SessionKeyButton.tsx
lumberjack/app2/contexts/: SessionProvider.tsx
lumberjack/app2/idl/: lumberjack.ts
lumberjack/app2/pages/: _app.tsx  index.tsx
lumberjack/app2/utils/: anchor.ts
lumberjack/program/: Anchor.toml  package-lock.json  package.json
lumberjack/program/programs/lumberjack/: Cargo.toml
lumberjack/program/programs/lumberjack/src/: constants.rs  lib.rs
lumberjack/program/programs/lumberjack/src/instructions/: chop_tree.rs  init_player.rs  mod.rs
lumberjack/program/programs/lumberjack/src/state/: game_data.rs  mod.rs  player_data.rs
lumberjack/program/tests/: lumberjack.ts
lumberjack/unity/Lumberjack/Assets/: InteractionBlocker.cs
lumberjack/unity/Lumberjack/ProjectSettings/: ProjectSettings.asset
lumberjack/unity/Lumberjack/UserSettings/: EditorUserSettings.asset
seven-seas/: README.md
seven-seas/app/: README.md  package.json
seven-seas/app/idl/: seven_seas.ts
seven-seas/app/pages/: index.tsx
seven-seas/app/pages/api/: sendTransaction.ts
seven-seas/app/utils/: anchor.ts
seven-seas/program/: Anchor.toml  canLVCKhoQHhT8iJJ2PUu9NQf6uaiBkndy3Y7tKtCW8.json  package.json  tokNTPpdBjMeLz1pHRmWgoUJ9sQ1VqxcE431B7adeYv.json
seven-seas/program/programs/seven-seas/: Cargo.toml
seven-seas/program/tests/: seven-seas.ts
seven-seas/unity/: LICENSE  README.md
seven-seas/unity/Assets/SolPlay/: SolPlay.prefab
seven-seas/unity/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
seven-seas/unity/UserSettings/: EditorUserSettings.asset
seven-seas/unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  (+2 more)
tiny-adventure/app/idl/: tiny_adventure.ts
tiny-adventure/program/: Anchor.toml
(+425 files in other folders)
