[package]
name = "battle-coins"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_coins"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = {version = "0.26.0",features = ["metadata"]}
mpl-token-metadata = { version="1.8.3", features = [ "no-entrypoint" ] }
solana-program = "~1.14.0"
